[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/GUI/Main/GUI.gd" type="Script" id=1]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=2]
[ext_resource path="res://Assets/Simple.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Levels/Level1.tscn" type="PackedScene" id=5]

[node name="GUI" type="Node2D"]
script = ExtResource( 1 )

[node name="AdMob" type="Node2D" parent="."]
script = ExtResource( 2 )
banner_id = "ca-app-pub-3940256099942544/6300978111"
is_personalized = false

[node name="Player" parent="." instance=ExtResource( 4 )]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ADDS" type="TouchScreenButton" parent="Control"]
modulate = Color( 0.945098, 0.968627, 0.580392, 1 )
position = Vector2( 435.578, 950.352 )
scale = Vector2( 61.9839, 44.3628 )
normal = ExtResource( 3 )
pressed = ExtResource( 3 )

[node name="Level1" parent="." instance=ExtResource( 5 )]
anchor_right = 0.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="banner_failed_to_load" from="AdMob" to="." method="_on_AdMob_banner_failed_to_load"]
[connection signal="banner_loaded" from="AdMob" to="." method="_on_AdMob_banner_loaded"]
[connection signal="rewarded" from="AdMob" to="." method="_on_AdMob_rewarded"]
[connection signal="pressed" from="Control/ADDS" to="." method="_on_ADDS_pressed"]
[connection signal="released" from="Control/ADDS" to="." method="_on_ADDS_released"]
